# app/dto/login.py
@@ -1,0 +1,8 @@
+from pydantic import BaseModel, EmailStr
+
+class LoginDTO(BaseModel):
+    id: int | None
+    username: str
+    password: str
+    email: str
+    
