# app/entities/login.py
@@ -1,0 +1,7 @@
+from pydantic import BaseModel
+
+class LoginEntity(BaseModel):
+    id: int | None
+    username: str
+    password: str
+    email: str
