# app/entities/user.py
@@ -1,5 +1,9 @@
 from pydantic import BaseModel, EmailStr
 
 class UserEntity(BaseModel):
+    id: int | None
     name: str
     email: EmailStr
+    photo: str
+    phoneNumber: str
+    id_login: int
